--- a/front-end/src/reset.css
+++ b/front-end/src/reset.css
@@ -11,6 +11,10 @@
   padding: 0;
 }
 
+ul {
+  list-style-type: none;
+}
+
 /* 3. Enable keyword animations */
 @media (prefers-reduced-motion: no-preference) {
   html {
