--- a/front-end/src/styles/Dashboard.css
+++ b/front-end/src/styles/Dashboard.css
@@ -1,11 +1,97 @@
 .dashboard {
+  height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
+  font-size: 1.5rem;
+}
+
+.active-tab {
+  background-color: #787a91;
+  color: #141e61;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.nav-tab {
+  border-right: 1px solid black;
+  padding: 0 1rem;
+
+  ul {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    li {
+      cursor: pointer;
+    }
+  }
 }
 
 .task-board {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+
+  .board-header {
+    padding-left: 1rem;
+    width: 100%;
+    border-bottom: 1px solid rgb(175, 174, 174);
+  }
+
+  .board-main {
+    padding: 0 1rem;
+    height: 100%;
+    width: 100%;
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin: 1rem 0;
+    }
+    .task-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border: 1px solid white;
+      padding: 0.5rem;
+      border-radius: 5px;
+    }
+  }
+
+  .message-bubble {
+    border: 1px solid white;
+    width: fit-content;
+    padding: 0.5rem 1rem;
+    border-radius: 0 2.5rem;
+    background-color: white;
+    color: black;
+  }
+}
+
+.board-footer {
+  background-color: inherit;
+  color: black;
+  border-radius: 5px;
+  width: 100%;
+
+  input {
+    border-radius: 2.5rem;
+    margin: 0 15px;
+    margin-bottom: 10px;
+    border-style: hidden;
+    background-color: #787a91;
+    width: 90%;
+    outline: 0;
+    border: 0;
+    padding: 0.5rem 0;
+    padding-left: 1rem;
+  }
+
+  input::placeholder {
+    color: black;
+  }
 }
